# UV_NTIEM_AI_ASSISTANT

./: .gitignore  README.md  main.py  pyproject.toml
src/app/: main.py  main_graph.py  main_graph_n_and_e.py  main_graph_state.py  run.py  settings.py
src/app/RAG/: graph.py
src/app/appointment_logic/: acc_app.py  app_graph.py  app_reminder.py  book_app.py  delete_app.py  read_app.py
src/app/components/: image_creation.py  polly.py  query_rewriters.py  question_router.py  watch_sermon.py
src/app/db_logic/: database.py  models.py
src/app/p_and_c/: counselling_embeddings.py  initial_prayer.json  p_and_c_embeddings.py  p_and_c_graph.py  prayer_embeddings.py  prayer_json.py  send_number.py
